--- a/test.ipynb
+++ b/test.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import torch\n",
-    "\n",
-    "tensor_a = torch.tensor([0.2, 0.4, 0.5, 0.1])\n",
-    "\n",
-    "ranked_index = torch.argsort(tensor_a, descending=False)\n",
-    "\n",
-    "# before_ranked = tensor_a[ranked_index]"
+    "a = 'faf'\n",
+    "a.isalpha()"
    ]
   },
   {
